# hey-cli

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  demo.tape
.github/workflows/: ci.yml  release.yml
src/: cli.rs  completions.rs  doctor.rs  main.rs  preset.rs  prompt.rs  risk.rs  sanitize.rs  style.rs  ui.rs
src/backend/: claude.rs  codex.rs  mod.rs  openrouter.rs
