[package]
name = "ai-in-terminal"
version = "0.4.0"
edition = "2021"
description = "hey — natural language to shell commands, with personality. Speaks Claude, Codex, and OpenRouter."
license = "MIT"
repository = "https://github.com/subinium/hey-cli"
homepage = "https://github.com/subinium/hey-cli"
readme = "README.md"
keywords = ["cli", "shell", "ai", "claude", "codex"]
categories = ["command-line-utilities"]
authors = ["subinium"]

[[bin]]
name = "hey"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
clap_complete = "4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "io-util", "process"] }
anyhow = "1"
ctrlc = "3"
tempfile = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = "z"
